<?xml version="1.0"?>
<package format="2">
  <name>steering_servo</name>
  <version>0.0.0</version>
  <description>Listener setting servo on mrProj2 (FHGR) to desired position.</description>
  <maintainer email="urban.willi@stud.fhgr.ch">Urban Willi</maintainer>
  <license>BSD</license>
  <author email="urban.willi@stud.fhgr.ch">Urban Willi</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  exec_depend>geometry_msgs</exec_depend>

</package>
