<?xml version="1.0"?>
<package>
  <name>xbox_controller</name>
  <version>1.0.0</version>
  <description>Xbox controller from Kevin</description>

  <maintainer email="urban.willi@stud.fhgr.ch">Urban Willi</maintainer>

  <license>BSD</license>

  <author>Urban Willi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <run_depend>geometry_msgs</run_depend> -->
  <run_depend>rospy</run_depend>
</package>
